# pygac

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASING.md  changelog.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy-sdist.yaml
continuous_integration/: environment.yaml
doc/: Makefile  rtd_environment.yaml
doc/source/: api.rst  conf.py  index.rst  installation.rst  introduction.rst  legacy.rst  methods.rst  usage.rst
etc/: pygac.cfg.template
gapfilled_tles/: TLE_noaa16.txt
pygac/: .gac_calibration.py.swp  __init__.py  _filter.c  _filter.pyx  astronomy.py  calibrate_klm.py  calibrate_pod.py  calibration.py  clock_offsets_converter.py  configuration.py  correct_tsm_issue.py  gac_calibration.py  gac_calibration.py_old  gac_io.py  gac_io.py_old  gac_klm.py  gac_lac_geotiepoints.py  gac_pod.py  gac_reader.py  gac_run.py  geotiepoints.py  investigate_bts1.m  klm_reader.py  l1c_factory.py  l1c_processor.py  lac_calibration.py  lac_klm.py  lac_pod.py  lac_reader.py  lac_run.py  mask.h5  noaa_calibration.py  patmosx_coeff_reader.py  pod_reader.py  pygac_geotiepoints.py  qual_flags.h5  reader.py  runner.py  slerp.py  temp1.h5  (+2 more)
pygac/calibration/: ir_uncertainty.py  noaa.py  uncertainty.py  vis_uncertainty.py  vis_uncertainty_test.py
pygac/data/: calibration.json  metopa_uncert.nc  metopb_uncert.nc  metopc_uncert.nc  noaa06_uncert.nc  noaa07_uncert.nc  noaa08_uncert.nc  noaa09_uncert.nc  noaa10_uncert.nc  noaa11_uncert.nc  noaa12_uncert.nc  noaa14_uncert.nc  noaa15_uncert.nc  noaa16_uncert.nc  noaa17_uncert.nc  noaa18_uncert.nc  noaa19_uncert.nc  tirosn_uncert.nc
pygac/tests/: __init__.py  test_angles.py  test_calibrate_klm.py  test_calibrate_pod.py  test_calibration_coefficients.py  test_corrections.py  test_init.py  test_io.py  test_ir_uncertainty.py  test_ir_uncertainty_avhrr_data.csv  test_klm.py  test_noaa_calibration_coefficients.py  test_noaa_calibration_prt_numbering.py  test_pod.py  test_reader.py  test_slerp.py  test_tsm.py  test_utils.py  test_vis_uncertainty.py  utils.py
