[project]
name = "pygac"
dynamic = ["version"]
description = "NOAA AVHRR GAC/LAC/FRAC reader and calibration"
authors = [
    { name = "The Pytroll Team", email = "pytroll@googlegroups.com" }
]
dependencies = [
    "bottleneck>=1.0.0",
    "docutils>=0.3",
    "h5py>=2.0.1",
    "numpy>=1.8.0",
    "pyorbital>=1.10.0",
    "python-geotiepoints>=1.1.8",
    "scipy>=0.8.0",
    "packaging",
    "xarray>=2024.1.0",
    "cftime>=1.6.4.post1",
    "netcdf4>=1.7.2",
    "aiohttp>=3.12.15",
    "requests>=2.32.4",
    "fsspec>=2025.7.0",
    "truststore>=0.10.4",
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/pytroll/pygac"
"Bug Tracker" = "https://github.com/pytroll/pygac/issues"
Documentation = "https://pygac.readthedocs.io/en/stable/"
"Source Code" = "https://github.com/pytroll/pygac"
Organization = "https://pytroll.github.io/"
Slack = "https://pytroll.slack.com/"
"Release Notes" = "https://github.com/pytroll/pygac/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ['pytest', 'pre-commit', 'ruff']
georef = [
    "georeferencer>=0.3.3",
]

[project.scripts]
pygac-convert-patmosx-coefficients = "pygac.patmosx_coeff_reader:main"

[project.entry-points."pygac.calibration"]
noaa = "pygac.calibration.noaa:calibrate"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pygac"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pygac/version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "Q", "NPY"]
